--- a/Recitations/Recitations.tex
+++ b/Recitations/Recitations.tex
@@ -668,4 +668,191 @@ E-mail: \href{mailto:ronlevie@post.tau.ac.il}{ronlevie@post.tau.ac.il}\\
 	\end{enumerate}
 \end{solution}
 
+\recitation
+\section{LU Decomposition and Norms}
+
+\begin{question}
+	Let
+	\begin{align*}
+		A &=
+			\begin{pmatrix}
+				1           & 2 & 3 \\
+				1           & 2 & 4 \\
+				\frac{1}{2} & 0 & 3 \\
+			\end{pmatrix}
+	\end{align*}
+	\begin{enumerate}
+		\item
+			Find the PLU decomposition, i.e. the LU decomposition with pivoting, of $A$.
+		\item
+			Represent $P$ as a permutation vector.
+		\item
+			Use the decomposition to solve ${A x = b}$ for
+			\begin{align*}
+				b &=
+					\begin{pmatrix}
+						5 \\
+						4 \\
+						7 \\
+					\end{pmatrix}
+			\end{align*}
+	\end{enumerate}
+\end{question}
+
+\begin{solution}
+	\begin{enumerate}[leftmargin=*]
+		\item
+			\begin{align*}
+				A &=
+					\begin{pmatrix}
+						1   & 2 & 3 \\
+						1   & 2 & 4 \\
+						0.5 & 0 & 3 \\
+					\end{pmatrix}\\
+				&\xrightarrow[m_{2 1} = 1 , m_{3 1} = 0.5]{R_2 \to R_2 - 1 R_1 , R_3 \to R_3 - \frac{1}{2} R_2}
+					\begin{pmatrix}
+						1 & 2  & 3   \\
+						0 & 0  & 1   \\
+						0 & -1 & 1.5 \\
+					\end{pmatrix}\\
+				&\xrightarrow[m_{2 1} = 0.5 , m_{3 1} = 1]{R_3 \leftrightarrow R_2}
+					\begin{pmatrix}
+						1 & 2  & 3   \\
+						0 & -1 & 1.5 \\
+						0 & 0  & 1   \\
+					\end{pmatrix}
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				P &=
+					\begin{pmatrix}
+						1 & 0 & 0 \\
+						0 & 0 & 1 \\
+						0 & 1 & 0 \\
+					\end{pmatrix}\\
+				L &=
+					\begin{pmatrix}
+						1       & 0       & 0 \\
+						m_{2 1} & 1       & 0 \\
+						m_{3 1} & m_{3 2} & 1 \\
+					\end{pmatrix}\\
+				&=
+					\begin{pmatrix}
+						1   & 0 & 0 \\
+						0.5 & 1 & 0 \\
+						1   & 0 & 1 \\
+					\end{pmatrix}\\
+				U &=
+					\begin{pmatrix}
+						1 & 2  & 3   \\
+						0 & -1 & 1.5 \\
+						0 & 0  & 1   \\
+					\end{pmatrix}
+			\end{align*}
+		\item
+			\begin{align*}
+				P &=
+					\begin{pmatrix}
+						1 & 0 & 0 \\
+						0 & 0 & 1 \\
+						0 & 1 & 0 \\
+					\end{pmatrix}
+			\end{align*}
+			Therefore, the corresponding permutation vector is
+			\begin{align*}
+				V &=
+					\begin{pmatrix}
+						1 \\
+						3 \\
+						2 \\
+					\end{pmatrix}
+			\end{align*}
+		\item
+			Using $V$,
+			\begin{align*}
+				B &\to
+					\begin{pmatrix}
+						5 \\
+						7 \\
+						4 \\
+					\end{pmatrix}
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				A x              & = b \\
+				\therefore L U x & = b
+			\end{align*}
+			Let
+			\begin{align*}
+				U x & = y
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				L y &= b\\
+				\therefore 
+					\begin{pmatrix}
+						1   & 0 & 0 \\
+						0.5 & 1 & 0 \\
+						1   & 0 & 1 \\
+					\end{pmatrix}
+					\begin{pmatrix}
+						y_1 \\
+						y_2 \\
+						y_3 \\
+					\end{pmatrix}
+				&=
+					\begin{pmatrix}
+						5 \\
+						7 \\
+						4 \\
+					\end{pmatrix}
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				y_1           & = 5 \\
+				0.5 y_1 + y_2 & = 7 \\
+				y_1 + y_3     & = 4
+			\end{align*}
+			Therefore, solving,
+			\begin{align*}
+				y_1 & = 5   \\
+				y_2 & = 4.5 \\
+				y_3 & = -1
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				U x &= y\\
+				\therefore
+					\begin{pmatrix}
+						1 & 2  & 3   \\
+						0 & -1 & 1.5 \\
+						0 & 0  & 1   \\
+					\end{pmatrix}
+					\begin{pmatrix}
+						x_1 \\
+						x_2 \\
+						x_3 \\
+					\end{pmatrix}
+				&=
+					\begin{pmatrix}
+						5   \\
+						4.5 \\
+						-1  \\
+					\end{pmatrix}
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				x_3                 & = -1  \\
+				-x^2 + 1.5 x_3      & = 4.5 \\
+				x_1 + 2 x_2 + 3 x_3 & = 5
+			\end{align*}
+			Therefore, solving,
+			\begin{align*}
+				x_1 & = 20 \\
+				x_2 & = -6 \\
+				x_3 & = -1
+			\end{align*}
+	\end{enumerate}
+\end{solution}
+
 \end{document}
