--- a/Recitations/Recitations.tex
+++ b/Recitations/Recitations.tex
@@ -60,6 +60,8 @@
 
 \newcommand{\divergence}{\mathrm{div\,}}
 
+\DeclareMathOperator{\cond}{cond}
+
 \makeatletter
 \@addtoreset{section}{part} %resets section numbers in new part
 \makeatother
@@ -852,6 +854,178 @@ E-mail: \href{mailto:ronlevie@post.tau.ac.il}{ronlevie@post.tau.ac.il}\\
 				x_2 & = -6 \\
 				x_3 & = -1
 			\end{align*}
+	\end{enumerate}
+\end{solution}
+
+\recitation
+\section{Condition Number}
+
+\begin{definition}[Condition number]
+	The condition number of a matrix $A$, with respect to a particular norm is defined as
+	\begin{align*}
+		\cond(A) &= \|A\| \cdot \|A^{-1}\|
+	\end{align*}
+\end{definition}
+
+\begin{theorem}
+	Let
+	\begin{align*}
+		A x &= B
+	\end{align*}
+	be a matrix equation.\\
+	Then,
+	\begin{equation*}
+		\frac{1}{\cond(A)} \frac{\|e_b\|}{\|b\|} \le \frac{\|e_x\|}{\|x\|} \le \cond(A) \frac{\|e_b\|}{\|b\|}
+	\end{equation*}
+	and the inequality is tight, i.e. there exist $\overline{x}$, $\overline{e_x}$, $\overline{b}$, $\overline{e_b}$, such that there is an equality, i.e. the bounds are the best bounds possible.
+\end{theorem}
+
+\begin{question}
+	Consider the system
+	\begin{align*}
+		A x & = b
+	\end{align*}
+	where
+	\begin{align*}
+		A &=
+			\begin{pmatrix}
+				100 & 99 \\
+				99  & 98 \\
+			\end{pmatrix}\\
+		B &=
+			\begin{pmatrix}
+				1.005 \\
+				0.995 \\
+			\end{pmatrix}
+	\end{align*}
+	The accurate solution is
+	\begin{align*}
+		x &=
+			\begin{pmatrix}
+				0.015  \\
+				-0.005 \\
+			\end{pmatrix}
+	\end{align*}
+	Consider two approximations of the solution
+	\begin{align*}
+		\tilde{x}_1 &=
+			\begin{pmatrix}
+				-0.182 \\
+				0.194  \\
+			\end{pmatrix}\\
+		\tilde{x}_2 &=
+			\begin{pmatrix}
+				-19.685 \\
+				19.895  \\
+			\end{pmatrix}
+	\end{align*}
+	\begin{enumerate}
+		\item Find the absolute error and the relative error in the RHS, in the infinity norm.
+		\item Fins the relative error, in the infinity norm, in $x$, assuming that $x$ is known.
+		\item Can we conclude that a small relative error in the RHS implies a small relaive error in the LHS?
+		\item How can this problem be determined without knowing the actual values of $x$?
+	\end{enumerate}
+\end{question}
+
+\begin{solution}
+	\begin{enumerate}[leftmargin=*]
+		\item
+			\begin{align*}
+				A \tilde{x}_1 &=
+					\begin{pmatrix}
+						100 & 99 \\
+						99  & 98 \\
+					\end{pmatrix}
+					\begin{pmatrix}
+						-0.182 \\
+						0.194  \\
+					\end{pmatrix}\\
+				&=
+					\begin{pmatrix}
+						1.006 \\
+						0.994 \\
+					\end{pmatrix}\\
+				&= \tilde{b}_1
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				e_{b_1} &= b - \tilde{b}_1\\
+				&=
+					\begin{pmatrix}
+						-0.001 \\
+						0.001  \\
+					\end{pmatrix}
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				\|e_{b_1}\|_{\infty} & = 0.001
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				\delta_{b_1} & = \frac{\|e_{b_1}\|_{\infty}}{\|b\|_{\infty}} \\
+                                             & = \frac{0.001}{1.005}                         \\
+                                             & \approx 10^{-3}
+			\end{align*}
+			Similarly,
+			\begin{align*}
+				\|e_{b_2}\|_{\infty} & = 0.1 \\
+				\delta_{b_2}         & \approx 10^{-1}
+			\end{align*}
+		\item
+			\begin{align*}
+				e_1 &= x - \tilde{x}_1\\
+				&=
+					\begin{pmatrix}
+						0.197  \\
+						-0.199 \\
+					\end{pmatrix}
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				\delta_{x_1} & = \frac{\|e_1\|_{\infty}}{\|x\|_{\infty}} \\
+                                             & = \frac{0.199}{0.015}                     \\
+                                             & \approx 13
+			\end{align*}
+			Similarly,
+			\begin{align*}
+				\delta_{x_2} & = 1326
+			\end{align*}
+		\item
+			Therefore, even though the relative error in $B$, i.e. the RHS is small, the error in $x$, i.e. in the LHS is huge.
+			Hence, a small relative error in the RHS does not imply a small relative error in the LHS.
+		\item
+			\begin{align*}
+				A &=
+					\begin{pmatrix}
+						100 & 99 \\
+						99  & 98 \\
+					\end{pmatrix}\\
+				\therefore A^{-1} &=
+					\begin{pmatrix}
+						-98 & 99   \\
+						99  & -100 \\
+					\end{pmatrix}
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				\|A\|_{\infty}                   & = 199 \\
+				\left\| A^{-1} \right\|_{\infty} & = 199
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				\cond(A) & = 199^2
+			\end{align*}
+			Therefore,
+			\begin{align*}
+				\frac{\|e_x\|}{\|x\|} & \le 199^2 \frac{\|e_b\|}{\|b\|}
+			\end{align*}
+			and the inequality is tight.\\
+			Therefore, as the inequality is tight, it is possible that an error in the RHS can be multiplied by $199^2$ in the LHS.\\
+			Therefore if the condition number is large, then such a problem might exist.
+			\marginnote
+			{
+				Realistically, if $A^{-1}$ can be calculated, $x$ can be calculated $x$ accurately.
+			}
 	\end{enumerate}
 \end{solution}
 
