--- a/Recitations/Recitations.tex
+++ b/Recitations/Recitations.tex
@@ -1165,9 +1165,9 @@ E-mail: \href{mailto:ronlevie@post.tau.ac.il}{ronlevie@post.tau.ac.il}\\
 		\item
 			An equivalent condition for convergence, for the Jacobi method is
 			\begin{align*}
-				\rho(B_J)                                       & < 1 \\
-				\therefore \max\{\lambda_1\}                    & < 1 \\
-				\therfore \sqrt{\left| \frac{b c}{a d} \right|} & < 1
+				\rho(B_J)                                        & < 1 \\
+				\therefore \max\{\lambda_1\}                     & < 1 \\
+				\therefore \sqrt{\left| \frac{b c}{a d} \right|} & < 1
 			\end{align*}
 			Similarly,
 			\begin{align*}
